--- a/.yamato/vikingvillage_urp-win-dx11.yml
+++ b/.yamato/vikingvillage_urp-win-dx11.yml
@@ -15,8 +15,8 @@ VikingVillage_URP_Win_DX11_performance_playmode_runtime_mono_Linear_trunk:
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -44,8 +44,8 @@ Build_VikingVillage_URP_Win_DX11_performance_playmode_runtime_mono_Linear_trunk:
         flavor: b1.xlarge
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -95,8 +95,8 @@ VikingVillage_URP_Win_DX11_performance_playmode_editor_mono_Linear_trunk:
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -155,8 +155,8 @@ VikingVillage_URP_Win_DX11_performance_build_editmode_mono_Linear_trunk:
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -216,8 +216,8 @@ VikingVillage_URP_Win_DX11_performance_playmode_runtime_mono_Linear_CUSTOM-REVIS
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -248,8 +248,8 @@ Build_VikingVillage_URP_Win_DX11_performance_playmode_runtime_mono_Linear_CUSTOM
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -303,8 +303,8 @@ VikingVillage_URP_Win_DX11_performance_playmode_editor_mono_Linear_CUSTOM-REVISI
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -367,8 +367,8 @@ VikingVillage_URP_Win_DX11_performance_build_editmode_mono_Linear_CUSTOM-REVISIO
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
+        VV_URP_BRANCH: urp-test
+        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
