--- a/.yamato/vikingvillage_urp-android-vulkan.yml
+++ b/.yamato/vikingvillage_urp-android-vulkan.yml
@@ -15,8 +15,8 @@ VikingVillage_URP_Android_Vulkan_performance_playmode_runtime_il2cpp_Linear_trun
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -55,8 +55,8 @@ Build_VikingVillage_URP_Android_Vulkan_performance_playmode_runtime_il2cpp_Linea
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -114,8 +114,8 @@ VikingVillage_URP_Android_Vulkan_performance_build_editmode_il2cpp_Linear_trunk:
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -171,8 +171,8 @@ VikingVillage_URP_Android_Vulkan_performance_playmode_runtime_il2cpp_Linear_CUST
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -214,8 +214,8 @@ Build_VikingVillage_URP_Android_Vulkan_performance_playmode_runtime_il2cpp_Linea
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -277,8 +277,8 @@ VikingVillage_URP_Android_Vulkan_performance_build_editmode_il2cpp_Linear_CUSTOM
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
