--- a/.yamato/vikingvillage_urp-win-dx12.yml
+++ b/.yamato/vikingvillage_urp-win-dx12.yml
@@ -13,10 +13,11 @@ VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_trunk:
         type: Unity::VM::GPU
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -44,8 +45,8 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_trunk:
         flavor: b1.xlarge
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -78,7 +79,7 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_trunk:
               set /p GIT_REVISIONDATE=<revdate.tmp
               echo %GIT_REVISIONDATE%
               del revdate.tmp
-              utr --artifacts_path=TestProjects/Viking-Village-Perf/test-results --build-only --category=URP --editor-location=.Editor --extra-editor-arg="-addscenetobuild=Assets/Scenes/The_Viking_Village.unity" --extra-editor-arg="-allowdebugging-" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-managedstrippinglevel=Low" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-playergraphicsapi=Direct3D12" --extra-editor-arg="-scriptingbackend=Mono2x" --extra-editor-arg="-stripenginecode-" --platform=StandaloneWindows64 --player-save-path=playersMedium --scripting-backend=Mono2x --suite=playmode --testfilter=Medium --testproject=./TestProjects/Viking-Village-Perf --timeout=1200
+              utr --artifacts_path=TestProjects/Viking-Village-Perf/test-results --build-only --category=URP --editor-location=.Editor --extra-editor-arg="-addscenetobuild=Assets/Scenes/The_Viking_Village.unity" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-playergraphicsapi=Direct3D12" --extra-editor-arg="-scriptingbackend=Mono2x" --platform=StandaloneWindows64 --player-save-path=playersMedium --scripting-backend=Mono2x --suite=playmode --testfilter=Medium --testproject=./TestProjects/Viking-Village-Perf --timeout=1200
     artifacts:
         logs:
             paths:
@@ -93,10 +94,11 @@ VikingVillage_URP_Win_DX12_performance_playmode_editor_mono_Linear_trunk:
         type: Unity::VM::GPU
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -153,10 +155,11 @@ VikingVillage_URP_Win_DX12_performance_build_editmode_mono_Linear_trunk:
         type: Unity::VM
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -213,11 +216,12 @@ VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_CUSTOM-REVIS
         type: Unity::VM::GPU
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -248,8 +252,8 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_CUSTOM
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -282,7 +286,7 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_CUSTOM
               set /p GIT_REVISIONDATE=<revdate.tmp
               echo %GIT_REVISIONDATE%
               del revdate.tmp
-              utr --artifacts_path=TestProjects/Viking-Village-Perf/test-results --build-only --category=URP --editor-location=.Editor --extra-editor-arg="-addscenetobuild=Assets/Scenes/The_Viking_Village.unity" --extra-editor-arg="-allowdebugging-" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-managedstrippinglevel=Low" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-playergraphicsapi=Direct3D12" --extra-editor-arg="-scriptingbackend=Mono2x" --extra-editor-arg="-stripenginecode-" --platform=StandaloneWindows64 --player-save-path=playersMedium --scripting-backend=Mono2x --suite=playmode --testfilter=Medium --testproject=./TestProjects/Viking-Village-Perf --timeout=1200
+              utr --artifacts_path=TestProjects/Viking-Village-Perf/test-results --build-only --category=URP --editor-location=.Editor --extra-editor-arg="-addscenetobuild=Assets/Scenes/The_Viking_Village.unity" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-playergraphicsapi=Direct3D12" --extra-editor-arg="-scriptingbackend=Mono2x" --platform=StandaloneWindows64 --player-save-path=playersMedium --scripting-backend=Mono2x --suite=playmode --testfilter=Medium --testproject=./TestProjects/Viking-Village-Perf --timeout=1200
     artifacts:
         logs:
             paths:
@@ -300,11 +304,12 @@ VikingVillage_URP_Win_DX12_performance_playmode_editor_mono_Linear_CUSTOM-REVISI
         type: Unity::VM::GPU
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -364,11 +369,12 @@ VikingVillage_URP_Win_DX12_performance_build_editmode_mono_Linear_CUSTOM-REVISIO
         type: Unity::VM
         image: sdet/gamecode_win10:stable
         flavor: b1.large
+        model: rtx2080
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: urp-test
-        VV_URP_REVISION: 449ee29a8d7e3aaf9ef690dda0ee0edeeee7dd0d
+        VV_URP_BRANCH: master
+        VV_URP_REVISION: eb763cb92d2bb22a1843c67351b90ab927508ec7
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
