--- a/TestProjects/UniversalUpgradeTest/Packages/manifest.json
+++ b/TestProjects/UniversalUpgradeTest/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "nuget.moq": "1.0.0",
     "com.unity.ide.rider": "3.0.4",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
